tests/ui/coroutine/issue-64620-yield-array-element.stderr
error: `yield` can only be used in `#[coroutine]` closures, or `gen` blocks
  --> $DIR/issue-64620-yield-array-element.rs:6:5
   |
LL |     yield arr[0];
   |     ^^^^^^^^^^^^
   |
help: use `#[coroutine]` to make this closure a coroutine
   |
LL | #[coroutine] pub fn crash(arr: [usize; 1]) {
   | ++++++++++++

error[E0627]: yield expression outside of coroutine literal
  --> $DIR/issue-64620-yield-array-element.rs:6:5
   |
LL |     yield arr[0];
   |     ^^^^^^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0627`.
